modified:   canvasstyle.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
 </head>
     <body>
-            <canvas id="canvas1" width="1400px" height="40px"></canvas>
-            <canvas id="myCanvas" width="1400px" height="800px"></canvas>
-        <script src="bracketscript.js"></script> 
+            <canvas id="canvas1" width="1400" height="40"></canvas>
+            <canvas id="myCanvas" width="1400" height="800"></canvas>
+            <script src="bracketscript.js"></script> 
         
 </body>
 </html>
